# diffct

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md  api.html  cone_cuda.py  cone_differentiable.py  cone_example.py  diffct.html  examples.html  fan_cuda.py  fan_differentiable.py  fan_example.py  fbp_fan_example.html  fbp_parallel_example.html  fdk_cone_example.html  genindex.html  getting_started.html  index.html  iterative_reco_cone_example.html  iterative_reco_fan_example.html  iterative_reco_parallel_example.html  modules.html  objects.inv  parallel_cuda.py  parallel_differentiable.py  parallel_example.py  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  test_mlx.py
_modules/: index.html
_sources/: api.rst.txt  diffct.rst.txt  examples.rst.txt  fbp_fan_example.rst.txt  fbp_parallel_example.rst.txt  fdk_cone_example.rst.txt  getting_started.rst.txt  index.rst.txt  iterative_reco_cone_example.rst.txt  iterative_reco_fan_example.rst.txt  iterative_reco_parallel_example.rst.txt  modules.rst.txt
diagnose_scripts/: diagnose_projection_conventions.py  diagnose_sart.py  sart_diagnostics.py
diffct/: __init__.py  analytical.py  constants.py  differentiable.py  geometry.py  non_differentiable.py  projectors.py  utils.py
diffct_mlx/: __init__.py  constants.py  geometry.py  projectors.py  real_measured_data_helper.py  regularizers.py  tv_gradients.py  utils.py
docs/: .buildinfo  .gitignore  Makefile  check_docstrings.py  check_links.py  index.html  py-modindex.html  requirements.txt  searchindex.js  validate_docs.py
examples/: call_reco_algorithms.py  fbp_fan.py  fbp_parallel.py  fdk_cone.py  iterative_reco_cone.py  iterative_reco_fan.py  iterative_reco_parallel.py  iterative_reco_random_trajectory.py  (+5 more)
(+111 files in other folders)
