[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffct"
version = "1.1.7"
description = "A CUDA-based library for computed tomography (CT) projection and reconstruction with differentiable operators"
readme = "README.md"
authors = [
    {name = "Yipeng Sun", email = "yipeng.sun@fau.de"},
]
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy",
    "numba",
    "torch",
]

[project.urls]
Homepage = "https://github.com/sypsyp97/diffct"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]