[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffct-mlx"
version = "1.0.0.dev0"
description = "Differentiable CT reconstruction for Apple Silicon using MLX and custom Metal kernels"
readme = "README.md"
authors = [
    {name = "Yipeng Sun", email = "yipeng.sun@fau.de"},
]
license = {text = "Apache 2.0"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "mlx>=0.20.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/sypsyp97/diffct"

[tool.hatch.build.targets.wheel]
packages = ["diffct_mlx"]

[tool.hatch.envs.default]
python = "python"